
  - OpenOffice export: ODT writer moved from sandbox to Doctutils core.
  - Unix man page export: manpage writer moved from sandbox to Doctutils
    core.

  - Apply [ 1719345 ] Galician translation
  - Apply [ 1905741 ] Polish translation
  - Apply [ 1878977 ] make_id(): deaccent characters.
  - Apply [ 2029251 ] return nonzero when tests fail.
  - Fix [ 1692788 ] allow UTF-8 in style sheets.

* reStructuredText:

  - Documented Unicode characters allowed as inline markup openers,
    closers, and delimiters.
  - Allow units for all length specifications.
  - Allow percent sign in "scale" argument of "figure" and "image" directives.
  - Bugfix: The "figalign" argument of a figure now works as intended
    (aligning the figure, not its contents).
  - Align images with class "align-[right|center|left]"
    (allows setting the alignment of an image in a figure).

* docutils/nodes.py:

  - Added ``Element.__contains__`` method, for the in-operator.

* docutils/parsers/rst/states.py:

  - Apply [ 1994493 ] Patch to support all kinds of quotes in inline markup.
  - Added support for Unicode inline markup delimiters "‐ ‑ ‒ – —" and
    " " (non-breaking space), and "¡ ¿" openers.

* docutils/parsers/directives/misc.py:

  - Added ``start-line`` and ``end-line`` options to ``include``
    directive to select a range of lines

* docutils/utils.py:

  - Add ``get_stylesheet_list`` function.
  - Apply [ 2834836 ] print info at halt

* docutils/transforms/universal.py:

  - Raise default priority of StripClasses to exclude stripped classes from
    the ToC.

* docutils/writers/html4css1/__init__.py:

  - ``--stylesheet`` and ``--stylesheet-path`` options support a comma
    separated list of stylesheets.
  - Address [ 1938891 ] Inline literal text creates "pre" span only when
    needed to prevent inter-word line wraps.

* docutils/writers/newlatex2e/__init__.py:

  - Apply [ 1612821 ] Double quotes in literal text in Italian/German
